better exception handling than before

--- a/mergeJupyterFiles.ipynb
+++ b/mergeJupyterFiles.ipynb
@@ -76,40 +76,61 @@
     "    with open(Filename,'w+') as f:\n",
     "            f.write(json.dumps(base_file))\n",
     "\n",
-    "\n",
+    "class CleanExit(Exception):\n",
+    "    '''Only meant for clean System exit'''\n",
+    "    def __init__(self):\n",
+    "        print(\"Unsuccesful attempt, exiting program...\")\n",
+    "        \n",
     "def main():\n",
-    "\t# get the list of all the files\n",
-    "\tlistOfFiles = os.listdir()\n",
-    "\ttry:\n",
-    "\t\t'''works incase you are using in Jupyter notebook\n",
-    "\t\tthen you need to remove the following files'''\n",
-    "\t\tlistOfFiles.remove('.ipynb_checkpoints')\n",
-    "\t\tlistOfFiles.remove('mainExperiment.ipynb')\n",
-    "\t\tlistOfFiles.remove('mergeJupyterFiles.py')\n",
-    "\texcept:\n",
-    "\t\t'''when you are running as a python script'''\n",
-    "\t\tlistOfFiles.remove('mergeJupyterFiles.py')\n",
+    "    # check if baseFile already exists. This will save you from\n",
+    "    # merging files multiple times\n",
+    "    if os.path.exists('baseFile.ipynb'):\n",
+    "        warning = \"\"\"WARNING: baseFile.ipynb already exists.\n",
+    "It is advised to remove it first to avoid merging\n",
+    "same files multiple times\"\"\"\n",
+    "        print(\"*\"*30)\n",
+    "        print(warning)\n",
+    "        print(\"*\"*30)\n",
+    "        def exit():\n",
+    "            import sys\n",
+    "            try:\n",
+    "                sys.exit()\n",
+    "            except:\n",
+    "                raise CleanExit\n",
+    "        proceed = input(\"continue anyway? [y / n]\\n>> \")\n",
+    "        if proceed in ['n', 'N']:\n",
+    "            exit()\n",
+    "        elif proceed in ['y', 'Y']:\n",
+    "            print(\"proceeding...\")\n",
+    "        else:\n",
+    "            print(\"wrong input hence -\")\n",
+    "            exit()\n",
     "\n",
-    "\t# sort the list \n",
-    "\tlistOfFiles.sort()\n",
+    "\t# get the list of all the files\n",
+    "    listOfFiles = os.listdir()\n",
+    "\n",
+    "    # remove unwanted files from list of files\n",
+    "    if '.ipynb_checkpoints' in listOfFiles:\n",
+    "        listOfFiles.remove('.ipynb_checkpoints')\n",
+    "    if \"mergeJupyterFiles.ipynb\" in listOfFiles:\n",
+    "        listOfFiles.remove('mergeJupyterFiles.ipynb')\n",
+    "    \n",
     "\n",
     "\t# iterate over the list of files to merge them\n",
-    "\tfor file in listOfFiles:\n",
-    "\t\tif \".ipynb\" in file:\n",
-    "\t\t\tmergeAllJupyterFile(file)\n",
+    "    for file in listOfFiles:\n",
+    "        if \".ipynb\" in file:\n",
+    "            mergeAllJupyterFile(file)\n",
     "\n",
     "        \n",
     "if __name__==\"__main__\":\n",
-    "\ttry:\n",
-    "\t\tmain()\n",
-    "\texcept Exception as e:\n",
-    "\t\tprint(e)\n",
-    "\t\tcontact_statement = \"\\n** Please contact the author at sunny.c17hawke@gmail.com **\\n\"\n",
-    "\t\tprint(\"#\"*len(contact_statement))\n",
-    "\t\tprint(contact_statement)\n",
-    "\t\tprint(\"#\"*len(contact_statement))\n",
-    "\telse:\n",
-    "\t\tprint(\"\\n** your file is ready by name baseFile.ipynb **\")\t\n"
+    "    try:\n",
+    "        main()\n",
+    "        print(\"\\n## Attempt Successfull!! ##\")\n",
+    "        print(\"\\n## Your file is ready by name baseFile.ipynb ##\")\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "    finally:\n",
+    "        print(\"\\n## For any feedbacks mail-to: <sunny.c17hawke@gmail.com> ##\\n\")\n"
    ]
   },
   {
@@ -136,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
