better file handling

--- a/mergeJupyterFiles.ipynb
+++ b/mergeJupyterFiles.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "## Access merged file at the following location ##\n",
+      "./results_folder/mergedFile_2020_02_14-21_16_44\n",
+      "\n",
+      "## Attempt Successfull!! ##\n",
+      "## For any feedbacks mail-to: <sunny.c17hawke@gmail.com> ##\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "# Author: Sunny Bhaveen Chandra\n",
@@ -20,7 +34,6 @@
     "\tbaseData = '''{\n",
     "\t\"cells\": [{\"cell_type\": \"markdown\", \"metadata\": {},\n",
     "\t\"source\": [\"# *Merged Jupyter Notebook*\"]}],\n",
-    "\t\n",
     "\t\"metadata\": {\n",
     "\t\"kernelspec\": {\n",
     "\t\"display_name\": \"Python 3\",\n",
@@ -75,37 +88,34 @@
     "    Filename = 'baseFile.ipynb'\n",
     "    with open(Filename,'w+') as f:\n",
     "            f.write(json.dumps(base_file))\n",
+    "        \n",
+    "def create_base_for_results():\n",
+    "    '''This moves the merged file to log folder created for it'''\n",
+    "    # path to root log directory \n",
+    "    root_logDir = os.path.join(os.curdir, \"results_folder\")\n",
     "\n",
-    "class CleanExit(Exception):\n",
-    "    '''Only meant for clean System exit'''\n",
-    "    def __init__(self):\n",
-    "        print(\"Unsuccesful attempt, exiting program...\")\n",
+    "    def move_file_sub_log_dir():\n",
+    "        '''This moves the baseFile to sub log directory'''\n",
+    "        # generate run id based on current time\n",
+    "        import time\n",
+    "        run_id = time.strftime(\"mergedFile_%Y_%m_%d-%H_%M_%S\")\n",
+    "        \n",
+    "        # path to move baseFile\n",
+    "        move_to_path = os.path.join(root_logDir, run_id)\n",
+    "        if not os.path.isdir(move_to_path):\n",
+    "            os.makedirs(move_to_path)\n",
+    "        base_file = 'baseFile.ipynb'\n",
+    "        \n",
+    "        # finally move baseFile\n",
+    "        import shutil\n",
+    "        shutil.move(base_file, move_to_path)\n",
+    "        print(f\"\\n## Access merged file at \\\n",
+    "the following location ##\\n{move_to_path}\")\n",
+    "    \n",
+    "    move_file_sub_log_dir()\n",
+    "        \n",
     "        \n",
     "def main():\n",
-    "    # check if baseFile already exists. This will save you from\n",
-    "    # merging files multiple times\n",
-    "    if os.path.exists('baseFile.ipynb'):\n",
-    "        warning = \"\"\"WARNING: baseFile.ipynb already exists.\n",
-    "It is advised to remove it first to avoid merging\n",
-    "same files multiple times\"\"\"\n",
-    "        print(\"*\"*30)\n",
-    "        print(warning)\n",
-    "        print(\"*\"*30)\n",
-    "        def exit():\n",
-    "            import sys\n",
-    "            try:\n",
-    "                sys.exit()\n",
-    "            except:\n",
-    "                raise CleanExit\n",
-    "        proceed = input(\"continue anyway? [y / n]\\n>> \")\n",
-    "        if proceed in ['n', 'N']:\n",
-    "            exit()\n",
-    "        elif proceed in ['y', 'Y']:\n",
-    "            print(\"proceeding...\")\n",
-    "        else:\n",
-    "            print(\"wrong input hence -\")\n",
-    "            exit()\n",
-    "\n",
     "\t# get the list of all the files\n",
     "    listOfFiles = os.listdir()\n",
     "\n",
@@ -117,20 +127,20 @@
     "    \n",
     "\n",
     "\t# iterate over the list of files to merge them\n",
+    "    listOfFiles.sort()\n",
     "    for file in listOfFiles:\n",
     "        if \".ipynb\" in file:\n",
     "            mergeAllJupyterFile(file)\n",
-    "\n",
+    "    create_base_for_results()\n",
     "        \n",
     "if __name__==\"__main__\":\n",
     "    try:\n",
     "        main()\n",
     "        print(\"\\n## Attempt Successfull!! ##\")\n",
-    "        print(\"\\n## Your file is ready by name baseFile.ipynb ##\")\n",
     "    except Exception as e:\n",
     "        print(e)\n",
     "    finally:\n",
-    "        print(\"\\n## For any feedbacks mail-to: <sunny.c17hawke@gmail.com> ##\\n\")\n"
+    "        print(\"## For any feedbacks mail-to: <sunny.c17hawke@gmail.com> ##\\n\")\n"
    ]
   },
   {
