checks for non existence of notebooks added

--- a/mergeJupyterFiles.ipynb
+++ b/mergeJupyterFiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -10,10 +10,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "## Access merged file at the following location ##\n",
-      "./results_folder/mergedFile_2020_02_14-21_16_44\n",
+      "## No jupyter notebooks found to merge ##\n",
       "\n",
-      "## Attempt Successfull!! ##\n",
+      "exiting program....\n",
+      "\n",
       "## For any feedbacks mail-to: <sunny.c17hawke@gmail.com> ##\n",
       "\n"
      ]
@@ -113,8 +113,28 @@
     "the following location ##\\n{move_to_path}\")\n",
     "    \n",
     "    move_file_sub_log_dir()\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "class CleanExit(Exception):\n",
+    "    '''Protects program from stopping abruptly'''\n",
+    "    def __init__(self):\n",
+    "        print(\"\\n## No jupyter notebooks found to merge ##\")\n",
+    "        print(\"\\nexiting program....\")\n",
+    "\n",
+    "\n",
+    "def safelyExit():\n",
+    "    '''safely exit when target notebooks are not present'''\n",
+    "    import sys\n",
+    "    try:\n",
+    "        sys.exit()\n",
+    "    except:\n",
+    "        raise CleanExit\n",
+    "\n",
+    "def is_target_notebooks_exists(listOfFiles):\n",
+    "    for file in listOfFiles:\n",
+    "        if \".ipynb\" in file:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
     "def main():\n",
     "\t# get the list of all the files\n",
     "    listOfFiles = os.listdir()\n",
@@ -124,8 +144,11 @@
     "        listOfFiles.remove('.ipynb_checkpoints')\n",
     "    if \"mergeJupyterFiles.ipynb\" in listOfFiles:\n",
     "        listOfFiles.remove('mergeJupyterFiles.ipynb')\n",
-    "    \n",
-    "\n",
+    "            \n",
+    "    # check the existence of taget notebook files\n",
+    "    if not is_target_notebooks_exists(listOfFiles):\n",
+    "    \tsafelyExit()\n",
+    "    \t\n",
     "\t# iterate over the list of files to merge them\n",
     "    listOfFiles.sort()\n",
     "    for file in listOfFiles:\n",
